src/driver/ajinextek/AXL(Library)/C, C++/AXDev.h



//========== 표준 I/O 기기 공통 커맨드 =========================================================================
    // Network제품 각 슬레이브 기기의 파라미터 설정 값을 반환하는 함수
    DWORD   __stdcall AxlM3GetStationParameter(long lBoardNo, long lModuleNo, WORD wNo, BYTE bSize, BYTE bModuleType, BYTE *pbParam);

    // Network제품 각 슬레이브 기기의 파라미터 값을 설정하는 함수
    DWORD   __stdcall AxlM3SetStationParameter(long lBoardNo, long lModuleNo, WORD wNo, BYTE bSize, BYTE bModuleType, BYTE *pbParam);

    // Network제품 각 슬레이브 기기의 ID값을 반환하는 함수
    DWORD   __stdcall AxlM3GetStationIdRd(long lBoardNo, long lModuleNo, BYTE bIdCode, BYTE bOffset, BYTE bSize, BYTE bModuleType, BYTE *pbParam);

    // Network제품 각 슬레이브 기기의 무효 커맨드로 사용하는 함수
    DWORD   __stdcall AxlM3SetStationNop(long lBoardNo, long lModuleNo, BYTE bModuleType);

    // Network제품 각 슬레이브 기기의 셋업을 실시하는 함수
    DWORD   __stdcall AxlM3SetStationConfig(long lBoardNo, long lModuleNo, BYTE bConfigMode, BYTE bModuleType);

    // Network제품 각 슬레이브 기기의 알람 및 경고 상태 값을 반환하는 함수
    DWORD   __stdcall AxlM3GetStationAlarm(long lBoardNo, long lModuleNo, WORD wAlarmRdMod, WORD wAlarmIndex, BYTE bModuleType, WORD *pwAlarmData);

    // Network제품 각 슬레이브 기기의 알람 및 경고 상태를 해제하는 함수
    DWORD   __stdcall AxlM3SetStationAlarmClear(long lBoardNo, long lModuleNo, WORD wAlarmClrMod, BYTE bModuleType);

    // Network제품 각 슬레이브 기기와의 동기통신을 설정하는 함수
    DWORD   __stdcall AxlM3SetStationSyncSet(long lBoardNo, long lModuleNo, BYTE bModuleType);

    // Network제품 각 슬레이브 기기와의 연결을 설정하는 함수
    DWORD   __stdcall AxlM3SetStationConnect(long lBoardNo, long lModuleNo, BYTE bVer, BYTE bComMode, BYTE bComTime, BYTE bProfileType, BYTE bModuleType);

    // Network제품 각 슬레이브 기기와의 연결 끊음을 설정하는 함수
    DWORD   __stdcall AxlM3SetStationDisConnect(long lBoardNo, long lModuleNo, BYTE bModuleType);

    // Network제품 각 슬레이브 기기의 비휘발성 파라미터 설정 값을 반환하는 함수
    DWORD   __stdcall AxlM3GetStationStoredParameter(long lBoardNo, long lModuleNo, WORD wNo, BYTE bSize, BYTE bModuleType, BYTE *pbParam);

    // Network제품 각 슬레이브 기기의 비휘발성 파라미터 값을 설정하는 함수
    DWORD   __stdcall AxlM3SetStationStoredParameter(long lBoardNo, long lModuleNo, WORD wNo, BYTE bSize, BYTE bModuleType, BYTE *pbParam);

    // Network제품 각 슬레이브 기기의 메모리 설정 값을 반환하는 함수
    DWORD   __stdcall AxlM3GetStationMemory(long lBoardNo, long lModuleNo, WORD wSize, DWORD dwAddress, BYTE bModuleType, BYTE bMode, BYTE bDataType, BYTE *pbData);

    // Network제품 각 슬레이브 기기의 메모리 값을 설정하는 함수
    DWORD   __stdcall AxlM3SetStationMemory(long lBoardNo, long lModuleNo, WORD wSize, DWORD dwAddress, BYTE bModuleType, BYTE bMode, BYTE bDataType, BYTE *pbData);


//========== 표준 I/O 기기 커넥션 커맨드 =========================================================================
    // Network제품 각 재정열된 슬레이브 기기의 자동 억세스 모드 값을 설정하는 함수
    DWORD   __stdcall AxlM3SetStationAccessMode(long lBoardNo, long lModuleNo, BYTE bModuleType, BYTE bRWSMode);

    // Network제품 각 재정열된 슬레이브 기기의 자동 억세스 모드 설정값을 반환하는 함수
    DWORD   __stdcall AxlM3GetStationAccessMode(long lBoardNo, long lModuleNo, BYTE bModuleType, BYTE *bRWSMode);

    // Network제품 각 슬레이브 기기의 동기 자동 연결 모드를 설정하는 함수
    DWORD   __stdcall AxlM3SetAutoSyncConnectMode(long lBoardNo, long lModuleNo, BYTE bModuleType, DWORD dwAutoSyncConnectMode);

    // Network제품 각 슬레이브 기기의 동기 자동 연결 모드 설정값을 반환하는 함수
    DWORD   __stdcall AxlM3GetAutoSyncConnectMode(long lBoardNo, long lModuleNo, BYTE bModuleType, DWORD *dwpAutoSyncConnectMode);

    // Network제품 각 슬레이브 기기에 대한 단일 동기화 연결을 설정하는 함수
    DWORD   __stdcall AxlM3SyncConnectSingle(long lBoardNo, long lModuleNo, BYTE bModuleType);

    // Network제품 각 슬레이브 기기에 대한 단일 동기화 연결 끊음을 설정하는 함수
    DWORD   __stdcall AxlM3SyncDisconnectSingle(long lBoardNo, long lModuleNo, BYTE bModuleType);

    // Network제품 각 슬레이브 기기와의 연결 상태를 확인하는 함수
    DWORD   __stdcall AxlM3IsOnLine(long lBoardNo, long lModuleNo, DWORD *dwData);


//========== 표준 I/O 프로파일 커맨드 =========================================================================
    // Network제품 각 동기화 상태의 슬레이브 I/O 기기에 대한 데이터 설정값을 반환하는 함수
    DWORD   __stdcall AxlM3GetStationRWS(long lBoardNo, long lModuleNo, BYTE bModuleType, DWORD *pdwParam, BYTE bSize);

    // Network제품 각 동기화 상태의 슬레이브 I/O 기기에 대한 데이터값을 설정하는 함수
    DWORD   __stdcall AxlM3SetStationRWS(long lBoardNo, long lModuleNo, BYTE bModuleType, DWORD *pdwParam, BYTE bSize);

    // Network제품 각 비동기화 상태의 슬레이브 I/O 기기에 대한 데이터 설정값을 반환하는 함수
    DWORD   __stdcall AxlM3GetStationRWA(long lBoardNo, long lModuleNo, BYTE bModuleType, DWORD *pdwParam, BYTE bSize);

    // Network제품 각 비동기화 상태의 슬레이브 I/O 기기에 대한 데이터값을 설정하는 함수
    DWORD   __stdcall AxlM3SetStationRWA(long lBoardNo, long lModuleNo, BYTE bModuleType, DWORD *pdwParam, BYTE bSize);


    // MLIII adjustment operation을 설정 한다.
    // dwReqCode == 0x1005 : parameter initialization : 20sec
    // dwReqCode == 0x1008 : absolute encoder reset   : 5sec
    // dwReqCode == 0x100E : automatic offset adjustment of motor current detection signals  : 5sec
    // dwReqCode == 0x1013 : Multiturn limit setting  : 5sec
    DWORD   __stdcall AxmM3AdjustmentOperation(long lAxisNo, DWORD dwReqCode);


    // M3 전용 원점 검색 진행 상태 진단용 함수이다.
    DWORD    __stdcall AxmHomeGetM3FWRealRate(long lAxisNo, DWORD *upHomeMainStepNumber, DWORD *upHomeSubStepNumber, DWORD *upHomeLastMainStepNumber, DWORD *upHomeLastSubStepNumber);

	// M3 전용 원점 검색시 센서존에서 탈출시 보정되는 위치 값을 반환하는 함수이다.
    DWORD   __stdcall AxmHomeGetM3OffsetAvoideSenArea(long lAxisNo, double *dPos);

    // M3 전용 원점 검색시 센서존에서 탈출시 보정되는 위치 값을 설정하는 함수이다.
	// dPos 설정 값이 0이면 자동으로 탈출시 보정되는 위치 값은 자동으로 설정된다.
	// dPos 설정 값은 양수의 값만 입력한다.
	DWORD   __stdcall AxmHomeSetM3OffsetAvoideSenArea(long lAxisNo, double dPos);


	// M3 전용, 절대치 엔코더 사용 기준, 원점검색 완료 후 CMD/ACT POS 초기화 여부 설정
	// dwSel: 0, 원점 검색후 CMD/ACTPOS 0으로 설정됨.[초기값]
	// dwSel: 1, 원점 검색후 CMD/ACTPOS 값이 설정되지 않음.
	DWORD   __stdcall AxmM3SetAbsEncOrgResetDisable(long lAxisNo, DWORD dwSel);


	// M3 전용, 절대치 엔코더 사용 기준, 원점검색 완료 후 CMD/ACT POS 초기화 여부 설정값 가져오기
	// upSel: 0, 원점 검색후 CMD/ACTPOS 0으로 설정됨.[초기값]
	// upSel: 1, 원점 검색후 CMD/ACTPOS 값이 설정되지 않음.
	DWORD   __stdcall AxmM3GetAbsEncOrgResetDisable(long lAxisNo, DWORD *upSel);


	// M3 전용, 슬레이브 OFFLINE 전환시 알람 유지 기능 사용 유무 설정
	// dwSel: 0, ML3 슬레이브 ONLINE->OFFLINE 알람 처리 사용하지 않음.[초기값]
	// dwSel: 1, ML3 슬레이브 ONLINE->OFFLINE 알람 처리 사용

	DWORD   __stdcall AxmM3SetOfflineAlarmEnable(long lAxisNo, DWORD dwSel);

	// M3 전용, 슬레이브 OFFLINE 전환시 알람 유지 기능 사용 유무 설정 값 가져오기
	// upSel: 0, ML3 슬레이브 ONLINE->OFFLINE 알람 처리 사용하지 않음.[초기값]
	// upSel: 1, ML3 슬레이브 ONLINE->OFFLINE 알람 처리 사용

	DWORD   __stdcall AxmM3GetOfflineAlarmEnable(long lAxisNo, DWORD *upSel);


	// M3 전용, 슬레이브 OFFLINE 전환 여부 상태 값 가져오기
	// upSel: 0, ML3 슬레이브 ONLINE->OFFLINE 전환되지 않음
	// upSel: 1, ML3 슬레이브 ONLINE->OFFLINE 전환되었음.
	DWORD   __stdcall AxmM3ReadOnlineToOfflineStatus(long lAxisNo, DWORD *upStatus);


    // Network 제품의 Configuration Lock 상태를 설정한다.
    // wLockMode  : DISABLE(0), ENABLE(1)
    DWORD   __stdcall AxlSetLockMode(long lBoardNo, WORD wLockMode);


    // Lock 정보를 설정
    DWORD   __stdcall AxlSetLockData(long lBoardNo, DWORD dwTotalNodeNum, DWORD *dwpNodeNo, DWORD *dwpNodeID, DWORD *dwpLockData);


	DWORD   __stdcall AxmMoveStartPosWithAVC(long lAxisNo, double dPosition, double dMaxVelocity, double dMaxAccel, double dMinJerk, double *dpMoveVelocity, double *dpMoveAccel, double *dpMoveJerk);

    // 카운터 모듈의 2-D 절대위치 트리거 기능을 위해 필요한 트리거 위치 정보를 설정한다.
    // lChannelNo : 0,1 channel 일 경우 0, 2,3 channel 의 경우 2 를 설정. 
    // nDataCnt : 
    //  nDataCnt > 0 : 데이터 등록, nDataCnt <= 0 : 등록된 데이터 초기화.
    // dwOption : Reserved.
    // dpPatternData : (X1, Y1)
    DWORD  __stdcall AxcTriggerSetPatternData(long lChannelNo, long nDataCnt,  DWORD dwOption, double* dpPatternData);

    // 카운터 모듈의 2-D 절대위치 트리거 기능을 위해 필요한 트리거 위치 정보를 확인한다.
    DWORD  __stdcall AxcTriggerGetPatternData(long lChannelNo, long* npDataCnt,  DWORD* dwpOption, double* dpPatternData);


	//연속 보간 관련하여 AxmContiEndNode 함수내에서 보간구동관련 Node 를 Data Queue 에 미리 채워넣을 수 있도록하는 기능을 활성화 한다.
	//bPushPrevContiQueue : 1 // 해당 기능 활성화 
	//bPushPrevContiQueue : 0 // 해당 기능 비활성화 	
	DWORD __stdcall AxmContiSetPushPrevContiQueueEnable(long lCoordinate,BOOL bPushPrevContiQueue);

	//설정해둔 AxmContiSetPushPrevContiQueueEnable Flag값을 반환한다.	
	DWORD __stdcall AxmContiGetPushPrevContiQueueEnable(long lCoordinate,BOOL *bPushPrevContiQueue);


	// 연속보간 구동 시 Data Queue 에 Node 정보가 적재되었는지 상태를 반환한다.
	// AxmContiSetPushPrevContiQueueEnable(long lCoordinate, 1) 로 설정되어있을 경우만 유효
	// bPushPrevContiQueueComplete : 1 // Node Data 적재 완료
	// bPushPrevContiQueueComplete : 0 // Node Data 적재 되어있지않음
	DWORD __stdcall AxmContiGetPushPrevContiQueueComplete(long lCoordinate, BOOL * bPushPrevContiQueueComplete);