src_old_backup/driver/ajinextek/AXL(Library)/Visual Basic(Net)/AXDev.vb


    '========== 표준 I/O 기기 공통 커맨드 =========================================================================
    ' Network제품 각 슬레이브 기기의 파라미터 설정 값을 반환하는 함수
    Public Declare Function AxlM3GetStationParameter Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal wNo As Integer, ByVal bSize As Byte, ByVal bModuleType As Byte, ByRef pbParam As Byte) As Integer
    ' Network제품 각 슬레이브 기기의 파라미터 값을 설정하는 함수
    Public Declare Function AxlM3SetStationParameter Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal wNo As Integer, ByVal bSize As Byte, ByVal bModuleType As Byte, ByRef pbParam As Byte) As Integer
    ' Network제품 각 슬레이브 기기의 ID값을 반환하는 함수
    Public Declare Function AxlM3GetStationIdRd Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal bIdCode As Byte, ByVal bOffset As Byte, ByVal bSize As Byte, ByVal bModuleType As Byte, ByRef pbParam As Byte) As Integer
    ' Network제품 각 슬레이브 기기의 무효 커맨드로 사용하는 함수
    Public Declare Function AxlM3SetStationNop Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal bModuleType As Byte) As Integer
    ' Network제품 각 슬레이브 기기의 셋업을 실시하는 함수
    Public Declare Function AxlM3SetStationConfig Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal bConfigMode As Byte, ByVal bModuleType As Byte) As Integer
    ' Network제품 각 슬레이브 기기의 알람 및 경고 상태 값을 반환하는 함수
    Public Declare Function AxlM3GetStationAlarm Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal wAlarmRdMod As Integer, ByVal wAlarmIndex As Integer, ByVal bModuleType As Byte, ByRef pwAlarmData As Integer) As Integer
    ' Network제품 각 슬레이브 기기의 알람 및 경고 상태를 해제하는 함수
    Public Declare Function AxlM3SetStationAlarmClear Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal wAlarmClrMod As Integer, ByVal bModuleType As Byte) As Integer
    ' Network제품 각 슬레이브 기기와의 동기통신을 설정하는 함수
    Public Declare Function AxlM3SetStationSyncSet Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal bModuleType As Byte) As Integer
    ' Network제품 각 슬레이브 기기와의 연결을 설정하는 함수
    Public Declare Function AxlM3SetStationConnect Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal bVer As Byte, ByVal bComMode As Byte, ByVal bComTime As Byte, ByVal bProfileType As Byte, ByVal bModuleType As Byte) As Integer
    ' Network제품 각 슬레이브 기기와의 연결 끊음을 설정하는 함수
    Public Declare Function AxlM3SetStationDisConnect Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal bModuleType As Byte) As Integer
    ' Network제품 각 슬레이브 기기의 비휘발성 파라미터 설정 값을 반환하는 함수
    Public Declare Function AxlM3GetStationStoredParameter Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal wNo As Integer, ByVal bSize As Byte, ByVal bModuleType As Byte, ByRef pbParam As Byte) As Integer
    ' Network제품 각 슬레이브 기기의 비휘발성 파라미터 값을 설정하는 함수
    Public Declare Function AxlM3SetStationStoredParameter Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal wNo As Integer, ByVal bSize As Byte, ByVal bModuleType As Byte, ByRef pbParam As Byte) As Integer
    ' Network제품 각 슬레이브 기기의 메모리 설정 값을 반환하는 함수
    Public Declare Function AxlM3GetStationMemory Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal wSize As Integer, ByVal dwAddress As Integer, ByVal bModuleType As Byte, ByVal bMode As Byte, ByVal bDataType As Byte, ByRef pbData As Byte) As Integer
    ' Network제품 각 슬레이브 기기의 메모리 값을 설정하는 함수
    Public Declare Function AxlM3SetStationMemory Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal wSize As Integer, ByVal dwAddress As Integer, ByVal bModuleType As Byte, ByVal bMode As Byte, ByVal bDataType As Byte, ByRef pbData As Byte) As Integer

    '========== 표준 I/O 기기 커넥션 커맨드 =========================================================================
    ' Network제품 각 재정열된 슬레이브 기기의 자동 억세스 모드 값을 설정하는 함수
    Public Declare Function AxlM3SetStationAccessMode Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal bModuleType As Byte, ByVal bRWSMode As Byte) As Integer
    ' Network제품 각 재정열된 슬레이브 기기의 자동 억세스 모드 설정값을 반환하는 함수
    Public Declare Function AxlM3GetStationAccessMode Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal bModuleType As Byte, ByRef bRWSMode As Byte) As Integer
    ' Network제품 각 슬레이브 기기의 동기 자동 연결 모드를 설정하는 함수
    Public Declare Function AxlM3SetAutoSyncConnectMode Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal bModuleType As Byte, ByVal dwAutoSyncConnectMode As Integer) As Integer
    ' Network제품 각 슬레이브 기기의 동기 자동 연결 모드 설정값을 반환하는 함수
    Public Declare Function AxlM3GetAutoSyncConnectMode Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal bModuleType As Byte, ByRef dwpAutoSyncConnectMode As Integer) As Integer
    ' Network제품 각 슬레이브 기기에 대한 단일 동기화 연결을 설정하는 함수
    Public Declare Function AxlM3SyncConnectSingle Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal bModuleType As Byte) As Integer
    ' Network제품 각 슬레이브 기기에 대한 단일 동기화 연결 끊음을 설정하는 함수
    Public Declare Function AxlM3SyncDisconnectSingle Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal bModuleType As Byte) As Integer
    ' Network제품 각 슬레이브 기기와의 연결 상태를 확인하는 함수
    Public Declare Function AxlM3IsOnLine Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByRef dwData As Integer) As Integer

    '========== 표준 I/O 프로파일 커맨드 =========================================================================
    ' Network제품 각 동기화 상태의 슬레이브 I/O 기기에 대한 데이터 설정값을 반환하는 함수
    Public Declare Function AxlM3GetStationRWS Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal bModuleType As Byte, ByRef pdwParam As Integer, ByVal bSize As Byte) As Integer
    ' Network제품 각 동기화 상태의 슬레이브 I/O 기기에 대한 데이터값을 설정하는 함수
    Public Declare Function AxlM3SetStationRWS Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal bModuleType As Byte, ByRef pdwParam As Integer, ByVal bSize As Byte) As Integer
    ' Network제품 각 비동기화 상태의 슬레이브 I/O 기기에 대한 데이터 설정값을 반환하는 함수
    Public Declare Function AxlM3GetStationRWA Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal bModuleType As Byte, ByRef pdwParam As Integer, ByVal bSize As Byte) As Integer
    ' Network제품 각 비동기화 상태의 슬레이브 I/O 기기에 대한 데이터값을 설정하는 함수
    Public Declare Function AxlM3SetStationRWA Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal bModuleType As Byte, ByRef pdwParam As Integer, ByVal bSize As Byte) As Integer

    ' MLIII adjustment operation을 설정 한다.
    ' dwReqCode == 0x1005 : parameter initialization : 20sec
    ' dwReqCode == 0x1008 : absolute encoder reset   : 5sec
    ' dwReqCode == 0x100E : automatic offset adjustment of motor current detection signals  : 5sec
    ' dwReqCode == 0x1013 : Multiturn limit setting  : 5sec
    Public Declare Function AxmM3AdjustmentOperation Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dwReqCode As Integer) As Integer

    ' M3 전용 원점 검색 진행 상태 진단용 함수이다.
    Public Declare Function AxmHomeGetM3FWRealRate Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef upHomeMainStepNumber As Integer, ByRef upHomeSubStepNumber As Integer, ByRef upHomeLastMainStepNumber As Integer, ByRef upHomeLastSubStepNumber As Integer) As Integer
    ' M3 전용 원점 검색시 센서존에서 탈출시 보정되는 위치 값을 반환하는 함수이다.
    Public Declare Function AxmHomeGetM3OffsetAvoideSenArea Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef dPos As Double) As Integer
    ' M3 전용 원점 검색시 센서존에서 탈출시 보정되는 위치 값을 설정하는 함수이다.
    ' dPos 설정 값이 0이면 자동으로 탈출시 보정되는 위치 값은 자동으로 설정된다.
    ' dPos 설정 값은 양수의 값만 입력한다.
    Public Declare Function AxmHomeSetM3OffsetAvoideSenArea Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dPos As Double) As Integer

    ' M3 전용, 절대치 엔코더 사용 기준, 원점검색 완료 후 CMD/ACT POS 초기화 여부 설정
    ' dwSel: 0, 원점 검색후 CMD/ACTPOS 0으로 설정됨.[초기값]
    ' dwSel: 1, 원점 검색후 CMD/ACTPOS 값이 설정되지 않음.
    Public Declare Function AxmM3SetAbsEncOrgResetDisable Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dwSel As Integer) As Integer

    ' M3 전용, 절대치 엔코더 사용 기준, 원점검색 완료 후 CMD/ACT POS 초기화 여부 설정값 가져오기
    ' upSel: 0, 원점 검색후 CMD/ACTPOS 0으로 설정됨.[초기값]
    ' upSel: 1, 원점 검색후 CMD/ACTPOS 값이 설정되지 않음.
    Public Declare Function AxmM3GetAbsEncOrgResetDisable Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef upSel As Integer) As Integer

    ' M3 전용, 슬레이브 OFFLINE 전환시 알람 유지 기능 사용 유무 설정
    ' dwSel: 0, ML3 슬레이브 ONLINE->OFFLINE 알람 처리 사용하지 않음.[초기값]
    ' dwSel: 1, ML3 슬레이브 ONLINE->OFFLINE 알람 처리 사용

    Public Declare Function AxmM3SetOfflineAlarmEnable Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dwSel As Integer) As Integer
    ' M3 전용, 슬레이브 OFFLINE 전환시 알람 유지 기능 사용 유무 설정 값 가져오기
    ' upSel: 0, ML3 슬레이브 ONLINE->OFFLINE 알람 처리 사용하지 않음.[초기값]
    ' upSel: 1, ML3 슬레이브 ONLINE->OFFLINE 알람 처리 사용

    Public Declare Function AxmM3GetOfflineAlarmEnable Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef upSel As Integer) As Integer

    ' M3 전용, 슬레이브 OFFLINE 전환 여부 상태 값 가져오기
    ' upSel: 0, ML3 슬레이브 ONLINE->OFFLINE 전환되지 않음
    ' upSel: 1, ML3 슬레이브 ONLINE->OFFLINE 전환되었음.
    Public Declare Function AxmM3ReadOnlineToOfflineStatus Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef upStatus As Integer) As Integer

    ' Network 제품의 Configuration Lock 상태를 설정한다.
    ' wLockMode  : DISABLE(0), ENABLE(1)
    Public Declare Function AxlSetLockMode Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal wLockMode As Integer) As Integer

    ' Lock 정보를 설정
    Public Declare Function AxlSetLockData Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal dwTotalNodeNum As Integer, ByRef dwpNodeNo As Integer, ByRef dwpNodeID As Integer, ByRef dwpLockData As Integer) As Integer

    Public Declare Function AxmMoveStartPosWithAVC Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dPosition As Double, ByVal dMaxVelocity As Double, ByVal dMaxAccel As Double, ByVal dMinJerk As Double, ByRef dpMoveVelocity As Double, ByRef dpMoveAccel As Double, ByRef dpMoveJerk As Double) As Integer
    ' 카운터 모듈의 2-D 절대위치 트리거 기능을 위해 필요한 트리거 위치 정보를 설정한다.
    ' lChannelNo : 0,1 channel 일 경우 0, 2,3 channel 의 경우 2 를 설정.
    ' nDataCnt :
    '  nDataCnt > 0 : 데이터 등록, nDataCnt <= 0 : 등록된 데이터 초기화.
    ' dwOption : Reserved.
    ' dpPatternData : (X1, Y1)
    Public Declare Function AxcTriggerSetPatternData Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal nDataCnt As Integer, ByVal dwOption As Integer, ByRef dpPatternData As Double) As Integer
    ' 카운터 모듈의 2-D 절대위치 트리거 기능을 위해 필요한 트리거 위치 정보를 확인한다.
    Public Declare Function AxcTriggerGetPatternData Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef npDataCnt As Integer, ByRef dwpOption As Integer, ByRef dpPatternData As Double) As Integer

    '연속 보간 관련하여 AxmContiEndNode 함수내에서 보간구동관련 Node 를 Data Queue 에 미리 채워넣을 수 있도록하는 기능을 활성화 한다.
    'bPushPrevContiQueue : 1  해당 기능 활성화
    'bPushPrevContiQueue : 0  해당 기능 비활성화
    Public Declare Function AxmContiSetPushPrevContiQueueEnable Lib "AXL.dll" (ByVal lCoordinate As Integer, ByVal bPushPrevContiQueue As Byte) As Integer
    '설정해둔 AxmContiSetPushPrevContiQueueEnable Flag값을 반환한다.
    Public Declare Function AxmContiGetPushPrevContiQueueEnable Lib "AXL.dll" (ByVal lCoordinate As Integer, ByRef bPushPrevContiQueue As BOOL*) As Integer

    ' 연속보간 구동 시 Data Queue 에 Node 정보가 적재되었는지 상태를 반환한다.
    ' AxmContiSetPushPrevContiQueueEnable(long lCoordinate, 1) 로 설정되어있을 경우만 유효
    ' bPushPrevContiQueueComplete : 1  Node Data 적재 완료
    ' bPushPrevContiQueueComplete : 0  Node Data 적재 되어있지않음
    Public Declare Function AxmContiGetPushPrevContiQueueComplete Lib "AXL.dll" (ByVal lCoordinate As Integer, ByRef bPushPrevContiQueueComplete As BOOL*) As Integer
